--- a/index.html
+++ b/index.html
@@ -133,15 +133,17 @@
                     </ul>
                 </section>
                 <section>
-                    <h4>When create story (5m), think of 3 things:</h4><hr>
+                    <h4>When create story (5m), think of 3 things:</h4>
+                    <hr>
                     <ul style="font-size:32px;">
                         <li><b>Setup</b>: WHERE does the story take place, and WHEN?</li><br>
                         <li><b>Action of the story</b>: What’s the action of the story?</li><br>
                         <li><b>Resolution/Reflection</b>: How does the story end, what did you or the audience learn?</li>
                     </ul>
                 </section>
-                <section><p>Listeners: what was your favorite DETAIL in the story</p></section>
-               
+                <section>
+                    <p>Listeners: what was your favorite DETAIL in the story</p>
+                </section>
                 <section>
                     <h3>Remixing someone's story</h3>
                     <hr>
@@ -171,6 +173,38 @@
                         <li class="fragment">The music was booming. The smells were delicious and made me…</li>
                     </ul>
                 </section>
+            </section>
+            <section>
+                <section>
+                    <h1>Session 3:</h1>
+                    <hr>
+                    <ul>
+                        <li>Sharing your stories from last time</li>
+                        <li>Ideas for Podcast Episodes</li>
+                        <li>Recording a short story</li>
+                    </ul>
+                </section>
+                <section>
+                    <p>Sharing stories from last time using snippets</p>
+                </section>
+                <section>
+                    <p>What are we trying to make?</p>
+                    <hr>
+                    <ul>
+                        <li><a href="https://www.podcastinsights.com/top-us-podcasts/">Examples of Podcasts </a></li>
+                        <li><a href="https://open.spotify.com/show/2YGaei3I55DO2I7FsRUd5h">Current Platform: TTL</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <p>What do we want to tell stories about?</p>
+                    <hr>
+                    <ul>
+                        <li><a href="https://www.thisamericanlife.org/589/tell-me-im-fat">How adults/society lies</a> (e.g. we're all really thin)</li>
+                        <li>Movie, book, article and why it changed you</li>
+                        <li><a href="https://www.youtube.com/watch?v=KQF79ch6mA8">Someone you admire and why</a></li>
+                    </ul>
+                </section>
+            </section>
             </section>
         </div>
     </div>
