--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
                         <li><a href="https://www.thisamericanlife.org/589/tell-me-im-fat">How adults/society lies</a> (e.g. we're all really thin)</li>
                         <li>Movie, book, article and why it changed you</li>
                         <li><a href="https://www.youtube.com/watch?v=KQF79ch6mA8">Someone you admire and why</a></li>
+                        <li>Overcoming a difficulty (<i>e.g.</i>story of cousin getting burned in house fire) </li>
                     </ul>
                 </section>
             </section>
