--- a/index.html
+++ b/index.html
@@ -205,7 +205,37 @@
                         <li>Overcoming a difficulty (<i>e.g.</i>story of cousin getting burned in house fire) </li>
                     </ul>
                 </section>
+
+
             </section>
+
+            </section>
+
+            <section>
+                <section>
+                    <h1>Session 5</h1>
+                    <hr>
+                    <p>Jordans</p>
+                </section>
+
+                <section>
+                    <h4>Jordans talking points</h4>
+                    <hr>
+                    <ul>
+                        <li>When did you get you 1st pair of jordans?</li>
+                        <li>Why what did you like about them? Details!</li>
+                        <li>What do Jordans "mean" to you?</li>
+                        <li>Why are Jordans different than other sneakers?</li>
+                        <li>How would you describe the social status that Jordans have in your community (<i>e.g.</i> friends, family, school, etc.)?</li>
+                        <li>What are questions you have about jordans?</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h3>Jordans Resources</h3>
+                    <hr>
+                    <p><a href="https://docs.google.com/document/d/1s46WO-EepHFSSsdwB04O6im35CqdHWcMumJmjpfJYhk/edit#">Here's</a> a google doc</p>
+                </section>
             </section>
         </div>
     </div>
