--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
             </section>
 
             <section>
-                <section>
-                    <h1>Session 5</h1>
+                <section id="session4">
+                    <h1>Session 4</h1>
                     <hr>
-                    <p>Jordans</p>
+                    <p>Jordans Part 1: Recording Convo</p>
                 </section>
 
                 <section>
