adding week 5 slides

--- a/index.html
+++ b/index.html
@@ -205,19 +205,14 @@
                         <li>Overcoming a difficulty (<i>e.g.</i>story of cousin getting burned in house fire) </li>
                     </ul>
                 </section>
-
-
             </section>
-
             </section>
-
             <section>
                 <section id="session4">
                     <h1>Session 4</h1>
                     <hr>
                     <p>Jordans Part 1: Recording Convo</p>
                 </section>
-
                 <section>
                     <h4>Jordans talking points</h4>
                     <hr>
@@ -230,11 +225,43 @@
                         <li>What are questions you have about jordans?</li>
                     </ul>
                 </section>
-
                 <section>
                     <h3>Jordans Resources</h3>
                     <hr>
                     <p><a href="https://docs.google.com/document/d/1s46WO-EepHFSSsdwB04O6im35CqdHWcMumJmjpfJYhk/edit#">Here's</a> a google doc</p>
+                </section>
+            </section>
+            <section>
+                <section id="week5">
+                    <h1>Session 5</h1>
+                    <hr>
+                    <p>Making something</p>
+                </section>
+
+                <section>
+                    <h3>Example: Monique Story</h3>
+                    <hr>
+                    <audio src="moniqueStory1.mp3" controls></audio>
+                </section>
+
+                <section>
+                    <h3>Actually Recording Today</h3>
+                    <hr>
+                    <ul>
+                        <li>Read one of your favorite song lyrics (avoid profanity) OR just describe favorite song</li>
+                        <li>When did you first hear it?</li>
+                        <li>What does it mean to you?</li>
+                        <li>When do you listen to this song</li>
+                        <li>Why do you think it speaks to you?</li>
+                    </ul>
+
+                </section>
+
+                <section>
+                    <h3>My example</h3>
+                    <hr>
+                    <iframe width="607" height="341" src="https://www.youtube.com/embed/cjIvu7e6Wq8?list=PL9RcJNZnftgocFV_1MKgdbWyGiccOWe0t" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
                 </section>
             </section>
         </div>
