changing week 5 id

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 </section>
             </section>
             <section>
-                <section id="week5">
+                <section id="session5">
                     <h1>Session 5</h1>
                     <hr>
                     <p>Making something</p>
